; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/xd84/extr_custom_matrix_helper.c_matrix_print.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/xd84/extr_custom_matrix_helper.c_matrix_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATRIX_ROWS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c": \00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define weak dso_local void @matrix_print() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 (...) @print_matrix_header()
  store i64 0, i64* %1, align 8
  br label %3

3:                                                ; preds = %14, %0
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @MATRIX_ROWS, align 8
  %6 = icmp slt i64 %4, %5
  br i1 %6, label %7, label %17

7:                                                ; preds = %3
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @phex(i64 %8)
  %10 = call i32 @print(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %11 = load i64, i64* %1, align 8
  %12 = call i32 @print_matrix_row(i64 %11)
  %13 = call i32 @print(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %14

14:                                               ; preds = %7
  %15 = load i64, i64* %1, align 8
  %16 = add nsw i64 %15, 1
  store i64 %16, i64* %1, align 8
  br label %3

17:                                               ; preds = %3
  ret void
}

declare dso_local i32 @print_matrix_header(...) #1

declare dso_local i32 @phex(i64) #1

declare dso_local i32 @print(i8*) #1

declare dso_local i32 @print_matrix_row(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
